Doctrine + controller + bootstrap + opti de process Graph

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarsExample07">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href={{ url('app_trame') }}>Trame PDF</a>
+                            <a class="nav-link" href={{ url('app_trame') }}>Trame Processus Graphique en image</a>
                         </li>
                     </ul>
                 </div>
