--- a/templates/trame/index.html.twig
+++ b/templates/trame/index.html.twig
@@ -10,6 +10,7 @@
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    
 </style>
 
 <div class="example-wrapper">
@@ -22,5 +23,13 @@
     </ul>
 </div>
 
-<div id="chart"></section>
+<div class="progress" style="width: 25%;">
+    <div id="progress-bar-chart" class="progress-bar bg-success" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+
+<button type="button" id="generateChartImage" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Générer les graphiques</button>
+
+<div id="chart"></div>
+
+
 {% endblock %}
