2 Controllers + BDD + Chart on Controller

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,12 @@
                         <li class="nav-item active">
                             <a class="nav-link" href={{ url('app_trame') }}>Trame Processus Graphique en image</a>
                         </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href={{ url('app_info_collaborators_index') }}>InfoCollaborators CRUD</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href={{ url('app_info_collaborators_read_only_index') }}>InfoCollaborators ReadOnly</a>
+                        </li>
                     </ul>
                 </div>
             </div>
