Process qui fonctionne

--- a/templates/info_collaborators_read_only/index.html.twig
+++ b/templates/info_collaborators_read_only/index.html.twig
@@ -79,5 +79,6 @@
     <button type="button" id="btnInfoSup" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Afficher plus d'information</button>
     <button type="button" id="generateAllChartImage" class="btnScript btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Générer tout les graphiques</button>
     <button type="button" id="generateAllBSI" class="btnScript btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Générer tout les BSI</button>
-    <button type="button" id="generateOneBSI" class="btnScript btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Générer tout les BSI sur un PDF</button>
+    {# Bloqué vu que pas besoin mais à garder
+    <button type="button" id="generateOneBSI" class="btnScript btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Générer tout les BSI sur un PDF</button> #}
 {% endblock %}
