TestTrame réussi par personne et avec graph 2

--- a/templates/info_collaborators_read_only/index.html.twig
+++ b/templates/info_collaborators_read_only/index.html.twig
@@ -59,6 +59,7 @@
                     <a href="{{ path('app_info_collaborators_read_only_show', {'id': info_collaborator.id}) }}">show</a>
                     <button type="button" id="generateChartImage{{ info_collaborator.matricule }}" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Générer les graphiques</button>
                     <button type="button" id="generateBSI{{ info_collaborator.matricule }}" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Générer le BSI</button>
+                    <button type="button" id="testTrame{{ info_collaborator.matricule }}" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Test de la nouvelles trame</button>
                 </td>
             </tr>
             <tr>
