base propre avec save

--- a/templates/info_collaborators_read_only/bsi.html.twig
+++ b/templates/info_collaborators_read_only/bsi.html.twig
@@ -153,14 +153,14 @@
     <body> 
         <main>
             {% for key, info_collaborator in info_collaborators %}
-                {# <div class="page">
+                <div class="page">
                     <li id="name">Monsieur {{ info_collaborator.name }}</li>
                     <img id="img_pieChartProtection" src="{{ imgPieChartProtection }}" alt="pieChartProtection">
                     <img id="img_Lyreco_Marly" class="margin-bottom" src="{{ imgMarly }}" alt="Lyreco_Marly">
                     
-                </div> #}
+                </div>
                               
-                <table class="page">
+                {# <table class="page">
                     <tr>
                         <td class="demiPage">
                         </td>
@@ -326,7 +326,7 @@
                             </section>
                         </td>
                     </tr>
-                </table>
+                </table> #}
             {% endfor %}
         </main>
     </body>
