Cpmmit avant progressBar branch

--- a/templates/trame/index.html.twig
+++ b/templates/trame/index.html.twig
@@ -29,7 +29,7 @@
 
 <button type="button" id="generateChartImage" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Générer les graphiques</button>
 
-<div id="chart"></div>
+<div id="chart1"></div>
 
 
 {% endblock %}
