--- a/templates/info_collaborators_read_only/index.html.twig
+++ b/templates/info_collaborators_read_only/index.html.twig
@@ -12,14 +12,27 @@
         .infoSup {
             display: none;
         }
+
+        .progress {
+            display: none;
+        }
+
+        #blockingOverlay {
+            display: none; /* caché par défaut */
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); /* Semi-transparent */
+            z-index: 9999; /* Assurez-vous qu'il est au-dessus de tout autre contenu */
+        }
     </style>
 
     <h1>InfoCollaborators index</h1>
 
-    <div class="progress" style="width: 25%;">
-        <div id="progress-bar-chart" class="progress-bar bg-success" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    
+    <div id="blockingOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:9999;"></div>
+
     <table class="table" data-collaboratorsjson="{{ info_collaborators|serialize(format = 'json') }}">
         <thead>
             <tr>
@@ -78,6 +91,11 @@
         {% endfor %}
         </tbody>
     </table>
+
+    <div class="progress" style="width: 25%;">
+        <div id="progress-bar-chart" class="progress-bar bg-success" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+
     {{ knp_pagination_render(info_collaborators)}}
     <input id="totalCollaborators" name="totalCollaborators" type="hidden" value="{{ all_collaborators|length }}" />
     <input id="nbrPage" name="nbrPage" type="hidden" value="{{ info_collaborators.getPageCount }}" />
