--- a/templates/info_collaborators_read_only/index.html.twig
+++ b/templates/info_collaborators_read_only/index.html.twig
@@ -14,24 +14,39 @@
         }
 
         .progress {
+            height: 35px;
+            position: sticky;
+            top: 50%;
+            right: 37.5%;
+            left: 37.5%;
             display: none;
+            z-index: 9999;
+        }
+
+        .progress-bar {
+            height: 35px;
+            font-size: medium;
         }
 
         #blockingOverlay {
-            display: none; /* caché par défaut */
+            display: none;
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5); /* Semi-transparent */
-            z-index: 9999; /* Assurez-vous qu'il est au-dessus de tout autre contenu */
+            background: rgba(0, 0, 0, 0.8);
+            z-index: 9900;
         }
     </style>
 
-    <h1>InfoCollaborators index</h1>
-
     <div id="blockingOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:9999;"></div>
+
+    <div class="progress" style="width: 25%;">
+        <div id="progress-bar-chart" class="progress-bar bg-success" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+
+    <h1>InfoCollaborators index</h1>
 
     <table class="table" data-collaboratorsjson="{{ info_collaborators|serialize(format = 'json') }}">
         <thead>
@@ -91,10 +106,6 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <div class="progress" style="width: 25%;">
-        <div id="progress-bar-chart" class="progress-bar bg-success" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
 
     {{ knp_pagination_render(info_collaborators)}}
     <input id="totalCollaborators" name="totalCollaborators" type="hidden" value="{{ all_collaborators|length }}" />
