--- a/templates/info_collaborators_read_only/index.html.twig
+++ b/templates/info_collaborators_read_only/index.html.twig
@@ -70,7 +70,7 @@
                 <th class="infoSup">Employer_share_health_insurance</th>
                 <th class="infoSup">Employee_share_pension</th>
                 <th class="infoSup">Employer_share_pension</th>
-                <th class="infoSup">Csp</th>
+                <th>Csp</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -91,7 +91,7 @@
                 <td class="infoSup">{{ info_collaborator.employerShareHealthInsurance }}</td>
                 <td class="infoSup">{{ info_collaborator.employeeSharePension }}</td>
                 <td class="infoSup">{{ info_collaborator.employerSharePension }}</td>
-                <td class="infoSup">{{ info_collaborator.csp }}</td>
+                <td>{{ info_collaborator.csp }}</td>
                 <td>
                     <a href="{{ path('app_info_collaborators_read_only_show', {'id': info_collaborator.id}) }}">show</a>
                     <button type="button" id="generateChartImage{{ info_collaborator.matricule }}" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Générer les graphiques</button>
